# steward

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
adapters/fake/: Cargo.toml
adapters/fake/src/: lib.rs
adapters/fake/tests/: all_ports.rs
adapters/jira/: Cargo.toml
adapters/jira/src/: lib.rs
adapters/litellm/: Cargo.toml
adapters/litellm/src/: lib.rs
adapters/mcp-gw/: Cargo.toml
adapters/mcp-gw/src/: lib.rs
adapters/opa/: Cargo.toml
adapters/opa/src/: lib.rs
adapters/openshell/: Cargo.toml
adapters/openshell/examples/: workspace_contract.rs
adapters/openshell/src/: lib.rs
adapters/spire/: Cargo.toml
adapters/spire/src/: lib.rs
bins/steward-controller/: Cargo.toml
bins/steward-controller/src/: main.rs
config/openshell/: provider-token-grants.yaml  spire-values.yaml
conformance/: AGENTS.md  register.toml
crates/steward-admission/: Cargo.toml
crates/steward-admission/src/: lib.rs
crates/steward-apiserver/: Cargo.toml
crates/steward-apiserver/src/: lib.rs
crates/steward-controller/: Cargo.toml
crates/steward-controller/src/: lib.rs
crates/steward-mint/: AGENTS.md
crates/steward-ports/: Cargo.toml
crates/steward-ports/src/: lib.rs
crates/steward-store/: Cargo.toml
crates/steward-store/src/: lib.rs
crates/steward-types/: Cargo.toml
crates/steward-types/src/: lib.rs
docs/: data-plane-spec.md  guarantee-register-generation.md  solution-overview.md  steward-ai-workflows-fit.md  workflow-and-task-spec.md
docs/design/: steward-admin-mockup.html
docs/roadmap/: steward-roadmap.md
docs/upstream/: openshell-upstream-strategy.md  pr-1970-review-comment.md  rfc-0011-review-comment.md
e2e/: Cargo.toml  Dockerfile.s3  s0.rs  s3.rs  s3_server.rs  s3_store.rs
manifests/: README.md  agents.apelogic.ai_agentruntimes.yaml
migrations/: 0001_s3_operational_state.sql  README.md
policy/: bootstrap_test.rego
scripts/: s0-0-openshell-spike.sh  s3-envelope-e2e.sh
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
