[package]
name = "steward-adapter-openshell"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
openshell-sdk = { git = "https://github.com/NVIDIA/OpenShell", rev = "1d4ac708f1d2a9ab94204cdce6ca0eee7e792839", version = "=0.0.0" }
sha2.workspace = true
steward-types = { path = "../../crates/steward-types", version = "=0.0.0" }
tokio.workspace = true

[lints]
workspace = true
