[package]
name = "steward-admission"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
steward-ports = { path = "../steward-ports", version = "=0.0.0" }
steward-types = { path = "../steward-types", version = "=0.0.0" }

[lints]
workspace = true
