[package]
name = "steward-store"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde_json.workspace = true
sqlx.workspace = true
steward-admission = { path = "../steward-admission", version = "=0.0.0" }
steward-types = { path = "../steward-types", version = "=0.0.0" }
uuid.workspace = true

[lints]
workspace = true
