[package]
name = "steward-types"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
k8s-openapi.workspace = true
kube = { workspace = true, features = ["derive"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
